# tg_bot_project_flask

./: .pre-commit-config.yaml  app.py  pyproject.toml  tasks.py  try_open_cv.py
api/: consts.py  models.py  resources.py  schemas.py  urls.py
migrations/versions/: 02e5b963a6cc_latest_migration.py  0a1a586e8998_changed_field_add_by_user.py  1cd15bf75473_changed_some_fields_name.py  1ed440064be6_added_comment_model.py  27c571b334e7_changed_some_fields_name.py  3a859109f90f_added_flask_model.py  3b7ec315f2fe_changed_to_bot_field.py  4003a5ab39b8_changed_like_name.py  430aab868be1_created_user_model.py  4d89a34f8904_added_model_like.py  61c85c9431f1_base_models.py  812820c518d3_.py  812820c518d3_changed_abstract_model.py  8259adcdf822_.py  856b03419a0b_created_user_model.py  9f23a7439c6b_changed_some_fields_name.py  ab18c512901f_changed_abstract_model.py  b9c061d9863e_changed_id_field.py  ba7071171f7c_changed_like_name.py  c426cbe6d160_main_tables.py  d704e5fa4202_changed_field_category_id.py  e2e6d68a51a0_added_like_name.py  e7b80fbbdb44_added_set_null.py  f559fe2c83e4_added_id_into_some_fields_in_bot_model.py  f958ac70bc4d_added_field_add_by_user_into_bot_model.py  fb2095cf82ab_created_base_model.py  fe15f9f5d816_created_model_video.py
services/: logging_funcs.py
static/: swagger.json
