[tool.poetry]
name = "tg_bot_project_flask"
version = "0.1.0"
description = ""
authors = ["maryia <masha.afanaseva.29@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "8.0.1"
Flask = "2.0.1"
itsdangerous = "2.0.1"
Jinja2 = "3.0.1"
MarkupSafe = "2.0.1"
Werkzeug = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
