[tool.poetry]
name = "tg_bot_project_flask"
version = "0.1.0"
description = ""
authors = ["maryia <masha.afanaseva.29@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.0.1"
itsdangerous = "2.0.1"
Jinja2 = "3.0.1"
MarkupSafe = "2.0.1"
Werkzeug = "2.0.1"
psycopg2 = "^2.9.1"
Flask-SQLAlchemy = "^2.5.1"
flask-marshmallow = "^0.14.0"
python-dotenv = "^0.18.0"
marshmallow-sqlalchemy = "^0.26.1"
Flask-Migrate = "^3.0.1"
Flask-RESTful = "^0.3.9"
Flask-JWT-Extended = "^4.2.1"
flask-swagger-ui = "^3.36.0"
Flask-Cors = "^3.0.10"
flask-rest-paginate = "^1.1.3"
click = "7.1.2"
celery = "^5.1.2"
redis = "^3.5.3"
boto3 = "^1.18.29"
moviepy = "^1.0.3"
ez_setup = "^0.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
